--- a/bs/Makefile
+++ b/bs/Makefile
@@ -1,12 +1,10 @@
 
 CC := /usr/bin/gcc
-CCFLAGS := -pthread -g -lpthread -Wall
+CCFLAGS := -pthread -g -lpthread -Wall -std=c99
 LDFLAGS := -pthread
 
 all: philosophen
 
-# %.o: %.c main.h
-#  $(CC) -c $(CCFLAGS) -o $@ $<
 
 main.o: main.c
 	$(CC) $(CCFLAGS) -c -o main.o main.c
@@ -16,6 +14,6 @@ monitor.o: monitor.c
 
 philosophen: main.o monitor.o
 	$(CC) $(LDFLAGS) -o philosophen main.o monitor.o
-#		$(CC) $(LDFLAGS) -o $@ $^
+
 clean: 
 	rm philosophen main.o monitor.o
